--- a/src/main/resources/de/stevenschwenke/java/javafx/workLifeBalance/client/cockpit/cockpit.fxml
+++ b/src/main/resources/de/stevenschwenke/java/javafx/workLifeBalance/client/cockpit/cockpit.fxml
@@ -12,5 +12,6 @@
     <PieChart id="PieChart" fx:id="pieChart" layoutX="50.0" layoutY="74.0" title="" />
     <Button fx:id="add" layoutX="50.0" layoutY="37.0" mnemonicParsing="false" onAction="#add" text="Add Activity" />
     <Label layoutX="251.0" layoutY="21.0" text="Work-Life-Balance" />
+    <Label fx:id="points" layoutX="522.0" layoutY="40.0" text="0" />
   </children>
 </AnchorPane>
