--- a/src/main/resources/de/stevenschwenke/java/javafx/workLifeBalance/client/newTimeRecord/newTimeRecord.fxml
+++ b/src/main/resources/de/stevenschwenke/java/javafx/workLifeBalance/client/newTimeRecord/newTimeRecord.fxml
@@ -15,7 +15,7 @@
         <Label layoutX="6.0" layoutY="60.0" text="Hours" />
         <TextField fx:id="hours" layoutX="90.0" layoutY="57.0" prefWidth="101.0" />
         <Button fx:id="ok" layoutX="154.0" layoutY="97.0" mnemonicParsing="false" onAction="#ok" text="OK" />
-        <Button fx:id="cancel" layoutX="78.0" layoutY="97.0" mnemonicParsing="false" text="Cancel" />
+        <Button fx:id="cancel" layoutX="78.0" layoutY="97.0" mnemonicParsing="false" onAction="#cancel" text="Cancel" />
         <ComboBox fx:id="aspect" layoutX="90.0" layoutY="33.0" prefHeight="21.0" prefWidth="101.0">
           <items>
             <FXCollections fx:factory="observableArrayList">
