--- a/src/main/resources/de/stevenschwenke/java/javafx/workLifeBalance/client/newTimeRecord/newTimeRecord.fxml
+++ b/src/main/resources/de/stevenschwenke/java/javafx/workLifeBalance/client/newTimeRecord/newTimeRecord.fxml
@@ -7,24 +7,23 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.paint.*?>
 
-<TitledPane animated="false" collapsible="false" contentDisplay="CENTER" minWidth="179.0" prefHeight="167.5" prefWidth="222.0" text="What did you do?" xmlns:fx="http://javafx.com/fxml" fx:controller="de.stevenschwenke.java.javafx.workLifeBalance.client.newTimeRecord.NewTimeRecordController">
+<TitledPane animated="false" collapsible="false" contentDisplay="CENTER" minWidth="179.0" prefHeight="257.5" prefWidth="210.00009999999747" text="What did you do?" xmlns:fx="http://javafx.com/fxml" fx:controller="de.stevenschwenke.java.javafx.workLifeBalance.client.newTimeRecord.NewTimeRecordController">
   <content>
-    <AnchorPane id="AnchorPane" minHeight="16.0" prefHeight="143.5" prefWidth="227.0">
+    <AnchorPane id="AnchorPane" minHeight="16.0" prefHeight="189.0" prefWidth="214.0">
       <children>
-        <Label id="testlabel" fx:id="coloniesLabel" layoutX="6.0" layoutY="32.0" text="Aspect:" />
-        <Label layoutX="6.0" layoutY="60.0" text="Hours" />
-        <TextField fx:id="hours" layoutX="90.0" layoutY="57.0" prefWidth="101.0" />
-        <Button fx:id="ok" layoutX="154.0" layoutY="97.0" mnemonicParsing="false" onAction="#ok" text="OK" />
-        <Button fx:id="cancel" layoutX="78.0" layoutY="97.0" mnemonicParsing="false" onAction="#cancel" text="Cancel" />
-        <ComboBox fx:id="aspect" layoutX="90.0" layoutY="33.0" prefHeight="21.0" prefWidth="101.0">
-          <items>
-            <FXCollections fx:factory="observableArrayList">
-              <String fx:value="Item 1" />
-              <String fx:value="Item 2" />
-              <String fx:value="Item 3" />
-            </FXCollections>
-          </items>
-        </ComboBox>
+        <Label id="testlabel" layoutX="8.0" layoutY="69.0" text="Career:" />
+        <Label layoutX="127.0" layoutY="43.0" text="Hours" />
+        <TextField id="hours" fx:id="careerHours" layoutX="92.0" layoutY="66.0" prefWidth="101.0" />
+        <Button fx:id="ok" layoutX="159.0" layoutY="197.0" mnemonicParsing="false" onAction="#ok" text="OK" />
+        <Button fx:id="cancel" layoutX="92.0" layoutY="197.0" mnemonicParsing="false" onAction="#cancel" text="Cancel" />
+        <Label layoutX="8.0" layoutY="97.0" text="Family:" />
+        <Label layoutX="8.0" layoutY="125.0" text="Health:" />
+        <Label layoutX="8.0" layoutY="153.0" text="You:" />
+        <TextField id="family" fx:id="familyHours" layoutX="92.0" layoutY="94.0" prefWidth="101.0" />
+        <TextField id="health" fx:id="healthHours" layoutX="92.0" layoutY="122.0" prefWidth="101.0" />
+        <TextField id="you" fx:id="youHours" layoutX="92.0" layoutY="150.0" prefWidth="101.0" />
+        <Label layoutX="8.0" layoutY="14.0" text="When" />
+        <TextField fx:id="date" layoutX="93.0" layoutY="14.0" prefWidth="101.0" text="(DATE)" />
       </children>
     </AnchorPane>
   </content>
